# tipe

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
tests/: test_tipe.py
tipe/: __init__.py  tipe.py
