[tool.poetry]
authors = ["Denis Mishankov <mishankov@mail.com>"]
description = "Typed pipe"
name = "tipe"
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<24.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
